--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -190,19 +190,19 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
 #s-signA, #s-signB, #s-signC, #s-signD {position:fixed;width:100%;height:100%;overflow:hidden;}
 #ifsign, #iftext, #ifvideo {float:left;margin:1.68em 0 0 0;padding: 22.934375% 0 0 0;width:auto; height:auto;}
-#ifliter0, #ifliter1, #ifliter2 {float:left;margin-top:-11.50em;margin-left:20em;padding: 0 3em 12em 0;width:1em; height:auto;}
+#ifliter0, #ifliter1, #ifliter2 {float:left;margin-top:-11.50em;margin-left:20em;padding: 0 2em 12em 0;width:1em; height:auto;}
 .pageA,.pageB,.pageC,.pageD{position:relative;z-index:-1;width:100%;height:100%;top:0;}
 .page{position:relative;z-index:1;width:100%;height:100%;top:0;}
 aside > div img, .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:inherit;color:#fff;text-transform: uppercase;}
-figure > h1 {position:absolute;z-index:9999;top:6%;padding:0.5em 0.9em ;background-color: #fff;width:8.8em;color:#020109;text-transform: uppercase;}
-.vign {position:relative;z-index:9999;top:10em;padding:0.5em 1.5em 0 0.5em;background-color:#020109;width:13em;}
+figure > h1 {position:relative;z-index:9999;top:4em;padding:0.5em 0.9em ;background-color: #fff;width:8.8em;color:#020109;text-transform: uppercase;}
+.vign {position:relative;z-index:9999;top:5em;padding:0.5em 1.5em 0 0.5em;background-color:#020109;width:13em;}
 article.blanc > h4
 {position:absolute;top:0.7em;right:-3em;z-index:9999;margin:1em 2.8em 1em 0;padding:1em 2.5em 3em 1.5em;line-height:2.2em;background:#020109;width:auto;color:#999;}
 article.blanc > p
 {position:absolute;top:0.2em;right:0;z-index:9999;margin:3.5em 0 0.5em 0;padding:1.5em 0 2.5em 1.4em;line-height:1em;background:#020109;width:inherit;color:#fff;}
 article.blanc > a, article.blanc > p a:hover {color:#fff;text-transform:lowercase;text-decoration: none;}
-.gen-img {position:absolute;left:26%;top:0;padding:3.15em 0}
+.gen-img {position:absolute;left:22em;top:0;padding:3.15em 0}
 .gen-img > img {width:70%;}
 
 /* TODO SLIDE DEV BLOCK BDD À RATIONALISER*/
@@ -328,22 +328,7 @@ img.centered,.aligncenter {display: block;margin: 0 auto 10px;}
 -------------------------------------------------- */
 
 
-@media only screen and (min-device-width: 240px) and (max-device-width: 300px)  {
-.head .text p {display:inline-table;width:93%;line-height:20px;font-size:80%;margin:30px 0;}
-body .inner > figure img {width: 80%;}
-.inner > figure p {line-height:15px;font-size:12px;}
-nav li a {font-size:85%;
-  }
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px)  {
-header[role="banner"] {margin:0 0 10px -26px;}
-.head .text p {display:inline-table;width:93%;line-height:20px;font-size:90%;margin:20px 0;text-align:justify;}
-.head .text p {display:inline-table;width:93%;line-height:20px;font-size:90%;margin:20px 0;text-align:justify;}
-.sp-content {background-size:2000px 450px;}
-body .inner > figure img {width: 80%;}
-body .inner > figure p, body .inner > figure p a{margin:0 1.8em 0 1.8em;font-size:90%;  line-height:1.8em;
-  }
-}
+
 @media (device-height: 568px) and (-webkit-min-device-pixel-ratio: 2) {
 }
 
