--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -66,9 +66,9 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 }
 
 /* TODO BOX OVERLAY STRIP CSS
--------------------------------------------------- */
-.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020202 url('../images/retina/teasing@2x.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
-box-shadow: 1px 1px 1px #111;}
+--------------------------------------------------
+ */
+.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;}
 
 .sp-slideshow input {display:none;}
 .sp-selector-1, .button-label-1 {margin-left: -36px;}
@@ -77,7 +77,7 @@ box-shadow: 1px 1px 1px #111;}
 .sp-selector-5, .button-label-5 {margin-left: 36px;}
 .sp-arrow {
     position: absolute;
-    top: 50%;
+    top: 55%;
     margin: -19px 1px;
     display: none;
     opacity: 0.3;
@@ -99,7 +99,7 @@ box-shadow: 1px 1px 1px #111;}
 .sp-selector-2:checked ~ .sp-arrow.sp-a3,
 .sp-selector-3:checked ~ .sp-arrow.sp-a4,
 .sp-selector-4:checked ~ .sp-arrow.sp-a5 {
-    right: 10px;
+    right: 15px;
     display: block;
     background-position: top right;
 }
@@ -107,7 +107,7 @@ box-shadow: 1px 1px 1px #111;}
 .sp-selector-3:checked ~ .sp-arrow.sp-a2,
 .sp-selector-4:checked ~ .sp-arrow.sp-a3,
 .sp-selector-5:checked ~ .sp-arrow.sp-a4 {
-    left: 10px;
+    left: 15px;
     display: block;
     background-position: top left;
 }
@@ -115,6 +115,7 @@ box-shadow: 1px 1px 1px #111;}
 input{
    display:none;
 }
+
 
 .sp-slider {
     position: relative;
@@ -130,6 +131,7 @@ input{
     -ms-transition: left ease-in 0.8s;
     transition: left ease-in 0.8s;
 }
+
 
 .sp-slider > li {
     color: #fff;
@@ -150,7 +152,7 @@ input{
     -ms-transition: opacity ease-in 0.4s 0.8s;
     transition: opacity ease-in 0.4s 0.8s;
 }
-.sp-slider > li img{
+.sp-slider > li p{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
@@ -161,10 +163,12 @@ input{
     padding: 10px 0 10px 10px;
     max-height: 100%;
     max-width: 100%;
+    box-shadow:10px 10px 10px 10px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;box-shadow: 10px 10px 10px 10px #111;
 }
 .sp-slider > li h1{
+    position:relative;
     display: block;
-    margin:10% auto;
+    margin:1% auto;
     background:#010101;
     width:310px;
     box-shadow:0px 0px 6px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
