--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -36,7 +36,7 @@ a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:right;margin:-3em;padding:20em 0 10em 0 ;width: 100%;height:40%;}
+div > img.tempo {float:right;margin:-3em;padding:18em 0 10em 0 ;width: 100%;height:40%;}
 #tempo {position:relative; top:-10em;}
 #press p {padding-bottom:2em}
 
@@ -68,7 +68,7 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 /* TODO BOX OVERLAY STRIP CSS
 --------------------------------------------------
  */
-.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;}
+.sp-content {float: none;width: auto;margin:0.5% 3.2% 2.5% 3.2% ;height: auto;overflow: hidden;}
 
 .sp-slideshow input {display:none;}
 .sp-selector-1, .button-label-1 {margin-left: -36px;}
