--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -44,7 +44,7 @@ div > img.tempo {float:right;margin:-3em;padding:18em 0 10em 0 ;width: 100%;heig
 -------------------------------------------------- */
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
-p.inners {float:right;margin:-0.1em 9.3em 0em 0;padding:0 0;text-align:center;font-size: 100%;}
+p.inners {float:right;margin:-0.1em 10.5em 0 0;padding:0 0;text-align:center;font-size: 100%;}
 p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
@@ -99,7 +99,7 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 .sp-selector-2:checked ~ .sp-arrow.sp-a3,
 .sp-selector-3:checked ~ .sp-arrow.sp-a4,
 .sp-selector-4:checked ~ .sp-arrow.sp-a5 {
-    right: 15px;
+    right: 35px;
     display: block;
     background-position: top right;
 }
@@ -107,7 +107,7 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 .sp-selector-3:checked ~ .sp-arrow.sp-a2,
 .sp-selector-4:checked ~ .sp-arrow.sp-a3,
 .sp-selector-5:checked ~ .sp-arrow.sp-a4 {
-    left: 15px;
+    left: 35px;
     display: block;
     background-position: top left;
 }
@@ -195,7 +195,7 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
 #ifsign, #iftext, #ifliter0, #ifvideo {float:left;margin:1.68em 0 0 0;padding: 22.934375% 0 0 0;width:auto; height:auto;}
 #ifliter0, #ifliter1, #ifliter2  {float:left;margin-top:3.5em;margin-left:2.5em;margin-right:16em;margin-bottom:-3em;padding: 0 1em 0.1em 0;width:0.7em; height:auto;}
-#ifliter0 h3, #ifliter1 h3, #ifliter2 h3  {background-color:#444;width:17em;padding: 0 1em;}
+#ifliter0 h3, #ifliter1 h3, #ifliter2 h3  {background-color:#444;width:16.85em;padding: 0 1em;}
 aside > div img, .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:inherit;color:#fff;text-transform: uppercase;}
 figure > h1 a {float: left;margin:3.2em 0 3em;padding:0.5em 1em ;background-color: #fff;width:auto;color:#020109;text-transform: uppercase;text-decoration: none;}
