--- a/css/typography.css
+++ b/css/typography.css
@@ -25,11 +25,11 @@ article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web'
 
 .inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 
-.inners a {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#666;letter-spacing:2px;cursor:pointer;text-decoration: none;}
-.inners a:hover {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;}
+.inners a {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#666;letter-spacing:2px;cursor:pointer;text-decoration: none;}
+.inners a:hover {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;}
 
-.frame a {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;text-decoration: none;}
-.frame a:hover {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;}
+.frame a {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;text-decoration: none;}
+.frame a:hover {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#fff;letter-spacing:2px;cursor:pointer;}
 
 .vign {font: 600 1em/1.9em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: none;}
 .vign a {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: underline;}
