--- a/css/typography.css
+++ b/css/typography.css
@@ -25,8 +25,9 @@ article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web'
 
 .inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 
-.inners a {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#666;letter-spacing:2px;cursor:pointer;text-decoration: none;}
-.inners a:hover {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;}
+p.inners {font-size: 130%;font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#666;letter-spacing:2px;cursor:pointer;text-decoration: none;}
+.inners a {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#666;letter-spacing:2px;cursor:pointer;text-decoration: none;font-size: 100%;font-size: 100%}
+.inners a:hover {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;font-size: 100%}
 
 .frame a {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;text-decoration: none;}
 .frame a:hover {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#fff;letter-spacing:2px;cursor:pointer;}
